navigatorios starts to work

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "AsyncStorage": "^0.1.5",
+    "lodash": "^4.17.4",
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-cookies": "^2.0.0",
