--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.43.3",
     "react-native-cookies": "^2.0.0",
+    "react-native-redux-router": "^1.0.7",
     "react-native-storage-wrapper": "^0.1.0",
-    "react-navigation": "^1.0.0-beta.7"
+    "react-navigation": "^1.0.0-beta.7",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
